--- a/sh-elf/scripts/build
+++ b/sh-elf/scripts/build
@@ -46,12 +46,7 @@ cd "${OLDPWD}"
 # Build and install just the C compiler
 mkdir -p "${BUILD_SRC_DIR}/${SH_TARGET}/gcc"
 cd "${BUILD_SRC_DIR}/${SH_TARGET}/gcc"
-if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/configured-gcc" ]; then
-    message "Configuring GCC"
-    CFLAGS="" \
-    LDFLAGS="" \
-    CFLAGS_FOR_TARGET="-O2 -m2 -mb -fomit-frame-pointer" \
-    LDFLAGS_FOR_TARGET="" ../"${GCC_SRC_DIR}"/configure \
+gcc_configure_options=(
         --disable-cld \
         --disable-initfini-array \
         --disable-largefile \
@@ -84,7 +79,20 @@ if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/configured-gcc" ]; then
         --with-gnu-as \
         --with-gnu-ld \
         --without-dwarf2 \
-        --with-newlib 1>> "${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log" 2>&1 \
+        --with-newlib)
+if ! [ -z "${BUILD_SUPPORT_LIBS}" ]; then
+    gcc_configure_options+=(
+        --with-gmp="${BUILD_SUPPORT_LIBS}" \
+        --with-mpfr="${BUILD_SUPPORT_LIBS}" \
+        --with-mpc="${BUILD_SUPPORT_LIBS}")
+fi
+if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/configured-gcc" ]; then
+    message "Configuring GCC"
+    CFLAGS="" \
+    LDFLAGS="" \
+    CFLAGS_FOR_TARGET="-O2 -m2 -mb -fomit-frame-pointer" \
+    LDFLAGS_FOR_TARGET="" ../"${GCC_SRC_DIR}"/configure \
+        ${gcc_configure_options[@]} 1>> "${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log" 2>&1 \
         || panic "See '${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log'" 1
     touch "${BUILD_SRC_DIR}/${SH_TARGET}/configured-gcc"
 fi
