--- a/sh-elf/scripts/build
+++ b/sh-elf/scripts/build
@@ -12,13 +12,12 @@ cd "${BUILD_SRC_DIR}/${SH_TARGET}/binutils"
 if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/configured-binutils" ]; then
     message "Configuring Binutils"
     CFLAGS="" LDFLAGS="" ../"${BINUTILS_SRC_DIR}"/configure \
-        --disable-werror \
-        --disable-debug \
-        --disable-nls \
-        --disable-shared \
-        --disable-threads \
         --prefix="${BUILD_INSTALL_DIR}/${SH_TARGET}" \
         --target="${SH_TARGET}" \
+        --disable-werror \
+        --disable-debug \
+        --disable-shared \
+        --disable-threads \
         --with-gcc \
         --with-gnu-as \
         --with-gnu-ld \
@@ -47,28 +46,29 @@ cd "${OLDPWD}"
 mkdir -p "${BUILD_SRC_DIR}/${SH_TARGET}/gcc"
 cd "${BUILD_SRC_DIR}/${SH_TARGET}/gcc"
 gcc_configure_options=(
+        --prefix="${BUILD_INSTALL_DIR}/${SH_TARGET}" \
+        --target="${SH_TARGET}" \
+        --program-prefix="${SH_TARGET}-" \
+        --with-endian=big \
+        --with-cpu=m2 \
         --disable-cld \
         --disable-initfini-array \
         --disable-largefile \
         --disable-libstdcxx-pch \
         --disable-multilib \
-        --disable-multilib \
-        --disable-nls \
         --disable-objc-gc \
         --disable-rpath \
         --disable-shared \
         --disable-threads \
         --disable-tls \
         --disable-win32-registry \
-        --enable-decimal-float=no \
+        --disable-decimal-float \
         --disable-frame-pointer \
+        --disable-fixed-point \
         --enable-languages=c,c++ \
         --enable-static \
-        --prefix="${BUILD_INSTALL_DIR}/${SH_TARGET}" \
-        --program-prefix="${SH_TARGET}-" \
-        --target="${SH_TARGET}" \
-        --with-endian=big \
-        --with-cpu=m2 \
+        --disable-fdpic \
+        --disable-default-pie \
         --disable-libquadmath \
         --disable-libquadmath-support \
         --disable-libvtv \
@@ -79,7 +79,8 @@ gcc_configure_options=(
         --with-gnu-as \
         --with-gnu-ld \
         --without-dwarf2 \
-        --with-newlib \
+        --without-headers \
+        --without-newlib
         MAKEINFO=missing)
 if ! [ -z "${BUILD_SUPPORT_LIBS}" ]; then
     gcc_configure_options+=(
@@ -115,67 +116,6 @@ unset "CFLAGS"
 cd "${OLDPWD}"
 
 
-# Build and install newlib
-mkdir -p "${BUILD_SRC_DIR}/${SH_TARGET}/newlib"
-cd "${BUILD_SRC_DIR}/${SH_TARGET}/newlib"
-if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/configured-newlib" ]; then
-    message "Configuring Newlib"
-    CFLAGS="-O2 -fomit-frame-pointer -ffast-math -fstrict-aliasing" \
-        ../"${NEWLIB_SRC_DIR}"/configure \
-        --disable-bootstrap \
-        --disable-build-poststage1-with-cxx \
-        --disable-build-with-cxx \
-        --disable-cloog-version-check \
-        --disable-dependency-tracking \
-        --disable-libada \
-        --disable-libquadmath \
-        --disable-libquadmath-support \
-        --disable-libssp \
-        --disable-maintainer-mode \
-        --disable-malloc-debugging \
-        --disable-multilib \
-        --disable-newlib-atexit-alloc \
-        --disable-newlib-hw-fp \
-        --disable-newlib-iconv \
-        --disable-newlib-io-float \
-        --disable-newlib-io-long-double \
-        --disable-newlib-io-long-long \
-        --disable-newlib-mb \
-        --disable-newlib-multithread \
-        --disable-newlib-register-fini \
-        --disable-newlib-supplied-syscalls \
-        --disable-objc-gc \
-        --enable-newlib-io-c99-formats \
-        --enable-newlib-io-pos-args \
-        --enable-newlib-reent-small \
-        --prefix="${BUILD_INSTALL_DIR}/${SH_TARGET}" \
-        --target="${SH_TARGET}" \
-        --with-endian=big \
-        --with-cpu=m2 \
-        --without-cloog \
-        --without-gmp \
-        --without-mpc \
-        --without-mpfr 1>> "${BUILD_SRC_DIR}/newlib-${SH_TARGET}.log" 2>&1 \
-        || panic "See '${BUILD_SRC_DIR}/newlib-${SH_TARGET}.log'" 1
-        touch "${BUILD_SRC_DIR}/${SH_TARGET}/configured-newlib"
-fi
-
-if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/built-newlib" ]; then
-    message "Building Newlib"
-    "${MAKE}" -j ${BUILD_MAKE_JOBS} 1>> "${BUILD_SRC_DIR}/newlib-${SH_TARGET}.log" 2>&1 || \
-        panic "See '${BUILD_SRC_DIR}/newlib-${SH_TARGET}.log'" 1
-    touch "${BUILD_SRC_DIR}/${SH_TARGET}/built-newlib"
-fi
-
-if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/installed-newlib" ]; then
-    message "Installing Newlib"
-    "${MAKE}" -j ${BUILD_MAKE_JOBS} install 1>> "${BUILD_SRC_DIR}/newlib-${SH_TARGET}.log" 2>&1 || \
-        panic "See '${BUILD_SRC_DIR}/newlib-${SH_TARGET}.log'" 1
-    touch "${BUILD_SRC_DIR}/${SH_TARGET}/installed-newlib"
-fi
-cd "${OLDPWD}"
-
-
 # Build and install the final compiler
 cd "${BUILD_SRC_DIR}/${SH_TARGET}/gcc"
 if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/built-g++" ]; then
@@ -201,7 +141,6 @@ if [[ "${OPTION_ENABLE_GDB}" == "yes" ]]; then
     if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/configured-gdb" ]; then
         message "Configuring GDB"
         CFLAGS="" LDFLAGS="" ../"${GDB_SRC_DIR}"/configure \
-            --disable-nls \
             --disable-werror \
             --prefix="${BUILD_INSTALL_DIR}/${SH_TARGET}" \
             --target="${SH_TARGET}" 1>> "${BUILD_SRC_DIR}/gdb-${SH_TARGET}.log" 2>&1 \
