--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ before_script:
   - docker pull ijacquez/libyaul-tool-chain:1.3
 
 script:
-  - docker run --name "container" -e "TRAVIS_BRANCH=${TRAVIS_BRANCH}" -e "BUILD_TYPE=${BUILD_TYPE}" -t -d ijacquez/libyaul-tool-chain:1.3 sh
+  - docker run --name "container" -e "TRAVIS_BRANCH=${TRAVIS_BRANCH}" -e "TRAVIS_COMMIT=${TRAVIS_COMMIT}" -e "BUILD_TYPE=${BUILD_TYPE}" -t -d ijacquez/libyaul-tool-chain:1.3 bash
   - docker cp .travis/build.sh container:/root/build.sh
   - docker exec container sh -e /root/build.sh
