--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ addons:
   apt:
     update: true
 
-script: travis_wait 120 bash -e .travis/build.sh
+script: travis_wait 120 sudo bash -e .travis/build.sh
