--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: required
 language: c
 
 before_script:
-  - sudo apt-get install -y wget make gcc diffutils patch tar gawk bzip2 libncurses5-dev texinfo
+  - sudo apt-get install -y wget make diffutils patch tar gawk bzip2 libncurses5-dev texinfo
 
 addons:
   apt:
