--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ sudo: required
 
 language: c
 
+matrix:
+  - BUILD_HOST="x86_64-w64-mingw32" OPTION_BUILD_GDB="no" OPTION_BUILD_MAKE="no"
+
 before_script:
   - sudo apt-get install -y wget make diffutils patch tar gawk bzip2 libncurses5-dev texinfo
 
@@ -9,4 +12,4 @@ addons:
   apt:
     update: true
 
-script: travis_wait 120 sudo bash -e .travis/build.sh
+script: travis_wait 300 sudo bash -e .travis/build.sh
