Update config to add LTO & crosstool-ng submodule

--- a/sh2eb-elf/native.config
+++ b/sh2eb-elf/native.config
@@ -13,6 +13,7 @@ CT_CONFIGURE_has_gnu_m4_1_4_12_or_newer=y
 CT_CONFIGURE_has_python_3_4_or_newer=y
 CT_CONFIGURE_has_bison_2_7_or_newer=y
 CT_CONFIGURE_has_python=y
+CT_CONFIGURE_has_svn=y
 CT_CONFIGURE_has_git=y
 CT_CONFIGURE_has_md5sum=y
 CT_CONFIGURE_has_sha1sum=y
@@ -29,6 +30,7 @@ CT_LOCAL_TARBALLS_DIR="${HOME}/src"
 CT_SAVE_TARBALLS=y
 CT_WORK_DIR="${CT_TOP_DIR}/.build"
 CT_BUILD_TOP_DIR="${CT_WORK_DIR:-${CT_TOP_DIR}/.build}/${CT_HOST:+HOST-${CT_HOST}/}${CT_TARGET}"
+CT_BUILD_DIR="${CT_BUILD_TOP_DIR}/build"
 CT_PREFIX_DIR="${CT_PREFIX:-${HOME}/x-tools}/${CT_HOST:+HOST-${CT_HOST}/}${CT_TARGET}"
 CT_RM_RF_PREFIX_DIR=y
 CT_REMOVE_DOCS=y
@@ -66,7 +68,7 @@ CT_ARCH_SH_SHOW=y
 CT_ARCH_SH_PKG_KSYM=""
 CT_ARCH_SH_SH2=y
 CT_ARCH_SH_VARIANT="sh2"
-CT_ALL_ARCH_CHOICES="ALPHA ARC ARM AVR M68K MICROBLAZE MIPS MOXIE MSP430 NIOS2 POWERPC RISCV S390 SH SPARC X86 XTENSA"
+CT_ALL_ARCH_CHOICES="ALPHA ARC ARM AVR C6X M68K MICROBLAZE MIPS MOXIE MSP430 NIOS2 POWERPC RISCV S390 SH SPARC X86 XTENSA"
 CT_ARCH_SUFFIX=""
 CT_OMIT_TARGET_VENDOR=y
 CT_ARCH_REQUIRES_MULTILIB=y
@@ -87,8 +89,6 @@ CT_TARGET_CFLAGS=""
 CT_TARGET_LDFLAGS=""
 CT_WANTS_STATIC_LINK=y
 CT_WANTS_STATIC_LINK_CXX=y
-CT_STATIC_TOOLCHAIN=y
-CT_SHOW_CT_VERSION=y
 CT_TOOLCHAIN_PKGVERSION=""
 CT_TOOLCHAIN_BUGURL="http://github.com/ijacquez/libyaul-build-scripts"
 CT_TARGET_ALIAS_SED_EXPR=""
@@ -141,6 +141,7 @@ CT_BINUTILS_LINKER_LD=y
 CT_BINUTILS_LINKERS_LIST="ld"
 CT_BINUTILS_LINKER_DEFAULT="bfd"
 CT_BINUTILS_RELRO=m
+CT_BINUTILS_DETERMINISTIC_ARCHIVES=y
 CT_BINUTILS_EXTRA_CONFIG_ARRAY=""
 CT_ALL_BINUTILS_CHOICES="BINUTILS"
 CT_LIBC_NONE=y
@@ -149,7 +150,7 @@ CT_LIBC_CHOICE_KSYM="NONE"
 CT_THREADS="none"
 CT_LIBC_NONE_SHOW=y
 CT_LIBC_NONE_PKG_KSYM=""
-CT_ALL_LIBC_CHOICES="AVR_LIBC BIONIC GLIBC MINGW_W64 MOXIEBOX MUSL NEWLIB NONE UCLIBC"
+CT_ALL_LIBC_CHOICES="AVR_LIBC BIONIC GLIBC MINGW_W64 MOXIEBOX MUSL NEWLIB NONE PICOLIBC UCLIBC"
 CT_CC_SUPPORT_FORTRAN=y
 CT_CC_SUPPORT_ADA=y
 CT_CC_SUPPORT_OBJC=y
@@ -168,12 +169,14 @@ CT_GCC_SRC_RELEASE=y
 CT_GCC_PATCH_GLOBAL=y
 CT_GCC_PATCH_ORDER="global"
 CT_GCC_V_8=y
-CT_GCC_VERSION="8.3.0"
+CT_GCC_VERSION="8.4.0"
 CT_GCC_MIRRORS="$(CT_Mirrors GNU gcc/gcc-${CT_GCC_VERSION}) $(CT_Mirrors sourceware gcc/releases/gcc-${CT_GCC_VERSION})"
 CT_GCC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GCC_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GCC_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_GCC_SIGNATURE_FORMAT=""
+CT_GCC_later_than_8=y
+CT_GCC_8_or_later=y
 CT_GCC_later_than_7=y
 CT_GCC_7_or_later=y
 CT_GCC_later_than_6=y
@@ -189,11 +192,10 @@ CT_CC_GCC_ENABLE_CXX_FLAGS=""
 CT_CC_GCC_EXTRA_CONFIG_ARRAY="--disable-cld --disable-initfini-array --disable-largefile --disable-hosted-libstdcxx --disable-libstdc__-v3 --disable-libstdcxx-pch --disable-libstdcxx-threads --disable-libstdcxx-time --disable-objc-gc --disable-rpath --disable-dlopen --disable-shared --disable-threads --disable-tls --disable-win32-registry --disable-decimal-float --enable-cxx-flags"
 CT_CC_GCC_MULTILIB_LIST=""
 CT_CC_GCC_STATIC_LIBSTDCXX=y
-CT_CC_GCC_CONFIG_TLS=m
 CT_CC_GCC_USE_GRAPHITE=y
+CT_CC_GCC_USE_LTO=y
 CT_CC_GCC_ENABLE_TARGET_OPTSPACE=y
 CT_CC_GCC_DISABLE_PCH=y
-CT_CC_GCC_LDBL_128=m
 CT_CC_GCC_LNK_HASH_STYLE_DEFAULT=y
 CT_CC_GCC_LNK_HASH_STYLE=""
 CT_CC_GCC_DEC_FLOATS_NO=y
@@ -242,11 +244,11 @@ CT_EXPAT_SRC_RELEASE=y
 CT_EXPAT_PATCH_GLOBAL=y
 CT_EXPAT_PATCH_ORDER="global"
 CT_EXPAT_V_2_2=y
-CT_EXPAT_VERSION="2.2.8"
-CT_EXPAT_MIRRORS="http://downloads.sourceforge.net/project/expat/expat/${CT_EXPAT_VERSION}"
+CT_EXPAT_VERSION="2.2.9"
+CT_EXPAT_MIRRORS="http://downloads.sourceforge.net/project/expat/expat/${CT_EXPAT_VERSION} https://github.com/libexpat/libexpat/releases/download/R_${CT_EXPAT_VERSION//./_}"
 CT_EXPAT_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_EXPAT_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
-CT_EXPAT_ARCHIVE_FORMATS=".tar.bz2"
+CT_EXPAT_ARCHIVE_FORMATS=".tar.xz .tar.lz .tar.bz2 .tar.gz"
 CT_EXPAT_SIGNATURE_FORMAT=""
 CT_COMP_LIBS_GMP=y
 CT_COMP_LIBS_GMP_PKG_KSYM="GMP"
@@ -348,6 +350,20 @@ CT_NCURSES_HOST_DISABLE_DB=y
 CT_NCURSES_HOST_FALLBACKS="linux,xterm,xterm-color,xterm-256color,vt100"
 CT_NCURSES_TARGET_CONFIG_ARGS=""
 CT_NCURSES_TARGET_FALLBACKS=""
+CT_COMP_LIBS_ZLIB=y
+CT_COMP_LIBS_ZLIB_PKG_KSYM="ZLIB"
+CT_ZLIB_DIR_NAME="zlib"
+CT_ZLIB_PKG_NAME="zlib"
+CT_ZLIB_SRC_RELEASE=y
+CT_ZLIB_PATCH_GLOBAL=y
+CT_ZLIB_PATCH_ORDER="global"
+CT_ZLIB_V_1_2_11=y
+CT_ZLIB_VERSION="1.2.11"
+CT_ZLIB_MIRRORS="http://downloads.sourceforge.net/project/libpng/zlib/${CT_ZLIB_VERSION} https://www.zlib.net/"
+CT_ZLIB_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
+CT_ZLIB_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
+CT_ZLIB_ARCHIVE_FORMATS=".tar.xz .tar.gz"
+CT_ZLIB_SIGNATURE_FORMAT="packed/.asc"
 CT_ALL_COMP_LIBS_CHOICES="CLOOG EXPAT GETTEXT GMP ISL LIBELF LIBICONV MPC MPFR NCURSES ZLIB"
 CT_GMP_NEEDED=y
 CT_MPFR_NEEDED=y
@@ -355,10 +371,12 @@ CT_ISL_NEEDED=y
 CT_MPC_NEEDED=y
 CT_EXPAT_NEEDED=y
 CT_NCURSES_NEEDED=y
+CT_ZLIB_NEEDED=y
 CT_GMP=y
 CT_MPFR=y
 CT_ISL=y
 CT_MPC=y
 CT_EXPAT=y
 CT_NCURSES=y
+CT_ZLIB=y
 CT_ALL_COMP_TOOLS_CHOICES="AUTOCONF AUTOMAKE BISON DTC LIBTOOL M4 MAKE"
