--- a/sh2eb-elf/host-i686-pc-linux-gnu.config
+++ b/sh2eb-elf/host-i686-pc-linux-gnu.config
@@ -416,6 +416,6 @@ CT_EXPAT=y
 CT_NCURSES=y
 CT_ZLIB=y
 CT_ALL_COMP_TOOLS_CHOICES="AUTOCONF AUTOMAKE BISON DTC LIBTOOL M4 MAKE"
-CT_HOST="i686-pc-linux-gnu"
+CT_HOST="i686-unknown-linux-gnu"
 CT_HOST_PREFIX=""
 CT_HOST_SUFFIX=""
