Update mirror for ISL

--- a/helpers/target-i686-pc-linux-gnu.config
+++ b/helpers/target-i686-pc-linux-gnu.config
@@ -332,7 +332,7 @@ CT_ISL_SRC_RELEASE=y
 CT_ISL_PATCH_ORDER="global"
 CT_ISL_V_0_21=y
 CT_ISL_VERSION="0.21"
-CT_ISL_MIRRORS="http://isl.gforge.inria.fr"
+CT_ISL_MIRRORS="https://libisl.sourceforge.io"
 CT_ISL_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_ISL_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_ISL_ARCHIVE_FORMATS=".tar.xz .tar.bz2 .tar.gz"
