Update mirrors in sh2eb-elf configs

--- a/configs/sh2eb-elf/native-linux.config
+++ b/configs/sh2eb-elf/native-linux.config
@@ -253,7 +253,7 @@ CT_EXPAT_VERSION="2.4.1"
 CT_EXPAT_MIRRORS="http://sources.buildroot.net/expat http://downloads.sourceforge.net/project/expat/expat/${CT_EXPAT_VERSION} https://github.com/libexpat/libexpat/releases/download/R_${CT_EXPAT_VERSION//./_}"
 CT_EXPAT_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_EXPAT_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
-CT_EXPAT_ARCHIVE_FORMATS=".tar.xz .tar.xz .tar.lz .tar.bz2 .tar.gz"
+CT_EXPAT_ARCHIVE_FORMATS=".tar.xz .tar.xz .tar.xz"
 CT_EXPAT_SIGNATURE_FORMAT=""
 CT_COMP_LIBS_GETTEXT=y
 CT_COMP_LIBS_GETTEXT_PKG_KSYM="GETTEXT"
